feat: added different logic for the feature and levels
