# src/models/experience.ts
@@ -3,6 +3,8 @@ import { Schema, model, Document } from 'mongoose';
 interface IExperience extends Document {
 	name: string;
 	land: string;
+	features: string[];
+	levels: string[];
 }
 
 const experienceSchema: Schema = new Schema(
@@ -17,6 +19,18 @@ const experienceSchema: Schema = new Schema(
 			required: true,
 			select: false,
 		},
+		features: [
+			{
+				type: Schema.Types.ObjectId,
+				ref: 'Feature',
+			},
+		],
+		levels: [
+			{
+				type: Schema.Types.ObjectId,
+				ref: 'Level',
+			},
+		],
 	},
 	{ timestamps: true }
 );
