# src/routes/feature.ts
@@ -2,26 +2,15 @@ import { Router } from 'express';
 import defineRoutes from 'helpers/defineRoutes';
 
 import {
-	getFeatures as getFeaturesController,
 	postFeature as postFeatureController,
 	putFeature as putFeatureController,
 	deleteFeature as deleteFeatureController,
-	getSingleFeature as getSingleFeatureController 
+	getSingleFeature as getSingleFeatureController,
 } from 'controllers/feature';
-import {
-	postFeature as postFeatureValidator,
-	putFeature as putFeatureValidator,
-} from 'validators/feature';
+import { postFeature as postFeatureValidator, putFeature as putFeatureValidator } from 'validators/feature';
 
 const router = Router();
 defineRoutes(router, [
-	{
-		method: 'get',
-		route: '/',
-		roles: ['portal-admin'],
-		permissions: ['read:features'],
-		controller: getFeaturesController,
-	},
 	{
 		method: 'post',
 		route: '/',
